# dobutsu_shogi_2024

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  index.html
dobutsu_shogi_2024/: Cargo.toml
dobutsu_shogi_2024/src/: backward_pass.rs  lib.rs  main.rs  state_map.rs  state_set.rs
dobutsu_shogi_2024/src/tests/: state_map.rs  state_set.rs
dobutsu_shogi_core/: Cargo.toml
dobutsu_shogi_core/src/: best_child_map.rs  main.rs
dobutsu_shogi_core/src/tests/: mod.rs  state_map.rs
dobutsu_shogi_web_interface/: Cargo.toml
dobutsu_shogi_web_interface/src/: lib.rs
docs/: spec.md
src/: backward_pass.rs  best_child_map.rs  forward.rs  forward_pass.rs  lib.rs  main.rs  pretty.rs  prune.rs  state_map.rs  state_set.rs
src/backward_pass/: mod.rs  tests.rs
src/forward_pass/: mod.rs
src/forward_pass/tests/: helpers.rs  mod.rs
src/tests/: helpers.rs  i9.rs  legal_moves.rs  mod.rs  parent_child_consistency.rs  state_map.rs  state_set.rs
static/css/: main.2c583ca8.css  main.2c583ca8.css.map  main.93acb0e5.css  main.93acb0e5.css.map
static/js/: main.595fb567.js  main.595fb567.js.map  main.5992909b.js  main.5992909b.js.map  main.76924f35.js  main.76924f35.js.map  main.7972e8ab.js  main.7972e8ab.js.map  main.cc0ba146.js  main.cc0ba146.js.map  main.eac04730.js  main.eac04730.js.map  main.efb8246d.js  main.efb8246d.js.map
web/: README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.tsx  index.css  index.tsx  reportWebVitals.ts  version.ts
web/src/images/: urls.ts
web/src/images/original_twemoji/: README.md
(+23 files in other folders)
