[package]
name = "dobutsu_shogi_web_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dobutsu_shogi_core = { path = "../dobutsu_shogi_core" }
wasm-bindgen = "0.2.95"
